--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 						</div>
 						<div class="content">
 							<div class="inner">
-								<img src="images/logo.svg" alt="" height="200" />
+								<img src="images/logo.svg" alt="" width="60%" />
 								<h1>CMC Perfection</h1>
 								<p>Call <a href="tel:0417 429 256">0417 429 256</a> to lose busy and get back to loving life!</p>
 							</div>
