Changed some images and added the SEO meta tags and also modified contact options

--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE HTML>
 <!--
 	Dimension by HTML5 UP
@@ -6,8 +7,10 @@
 -->
 <html>
 	<head>
-		<title>CMC Perfection - Personal or Virtual Assistant</title>
 		<meta charset="utf-8" />
+		<title>CMC Perfection - personal assistant services</title>
+		<meta name="description" content="Can provide you with Personal or Virtual Assistant services that cater to the requirements of your workplace week to week.">
+		<meta name="keywords" content="PA, personal assistant, Virtual Assistant, secretary, administrative, JP, Justice of the Peace">
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
@@ -17,7 +20,6 @@
 
 		<!-- Wrapper -->
 			<div id="wrapper">
-
 				<!-- Header -->
 					<header id="header">
 						<div class="logo">
@@ -27,7 +29,7 @@
 							<div class="inner">
 								<img src="images/logo.svg" alt="" width="60%" />
 								<h1>CMC Perfection</h1>
-								<p>Call <a href="tel:0417 429 256">0417 429 256</a> to lose busy and get back to loving life!</p>
+								<p>Call <a href="tel:0417 429 256">0417 429 256</a> to lose <em>"busy"</em> and get back to loving life!</p>
 							</div>
 						</div>
 						<nav>
@@ -36,25 +38,21 @@
 								<li><a href="#work">Praise</a></li>
 								<li><a href="#about">About</a></li>
 								<li><a href="#contact">Contact</a></li>
-								<!--<li><a href="#elements">Elements</a></li>-->
 							</ul>
 						</nav>
 					</header>
-
 				<!-- Main -->
 					<div id="main">
-
 						<!-- Intro -->
 							<article id="intro">
 								<h2 class="major">Intro</h2>
-								<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
+								<span class="image main"><img src="images/cmc_perfection.png" alt="" /></span>
 								<p>Have you always dreamt of having your very own Personal or Virtual Assistant?</p>
 								<p>Well dream no more!</p>
 								<p>CMC Perfection can provide you with the luxury you have always desired at a cost you can afford. There is no need to have to have a full-time staff member.</br>You may only need your very own Personal or Virtual Assistant for an hour or two per week or even a day or two per week.</p>
 								<p>Let CMC Perfection cater to your needs and work in with you and your budget. Help is just a phone call away…</p>
 								<p>Call <a href="tel:0417 429 256">0417 429 256</a> to lose <em>busy</em> and get back to loving life!</p>
 							</article>
-
 						<!-- Work -->
 							<article id="work">
 								<h2 class="major">Praise</h2>
@@ -66,7 +64,6 @@
 								<p><blockquote>Corinne Culbert worked part-time with Fencing Australia from 2012 to 2014. When we realised that she had commenced her own business working as a consultant Personal Assistant, we booked CMC Perfection in straight away. CMC Perfection is a flexible way to have office support. In most cases, there is often no need to have a full-time staff member. You can simply cater to the requirements of your workplace week to week. CMC Perfection is always accommodating and happy to assist whenever possible. We definitely recommend CMC Perfection for your Personal Assistant needs. Whether you need support in the office or as a virtual assistant, don’t hesitate to call CMC Perfection.</blockquote><strong>CHRIS POWER, Fencing Australia Pty Limited</strong></p>
 								<p><blockquote>I have known Corinne Culbert since the commencement of her career as a Personal Assistant back in 1996. Since that time, Ms. Culbert has been offering my business support whenever I have needed it. I don’t need a full-time PA and as a result being able to have CMC Perfection on-call for when my business needs her most is wonderful. I recommend CMC Perfection highly. There is no pressure or lock-in contracts. Help when needed is literally a phone call away.</blockquote><strong>JOHNNY CICUTO, Johnny’s Automotive Workshop</strong></p>
 							</article>
-
 						<!-- About -->
 							<article id="about">
 								<h2 class="major">About</h2>
@@ -83,266 +80,22 @@ Allow me to create the gift of time for you and get your life sorted! Call me to
 Warm regards,</br></br>
  <img src="images/sig.svg" height="42" alt="Signature" /></br>CORINNE CULBERT, JP 103234</p>
 							</article>
-
 						<!-- Contact -->
 							<article id="contact">
 								<h2 class="major">Contact</h2>
 								<h3>Email: <a href="mailto:corinne@cmcperfection.com.au">corinne@cmcperfection.com.au</a></h3>
-								<h3>Call: <a href="tel:0417 429 256">0417 429 256</a></h3>
+								<h3>Phone: <a href="tel:0417 429 256">0417 429 256</a></h3>
 								<ul class="icons">
 									<li><a href="https://www.linkedin.com/company/6457868/" class="icon fa-linkedin"><span class="label">Twitter</span></a></li>
 									<li><a href="https://www.facebook.com/cmcperfection/" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
 									<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
 								</ul>
 							</article>
-
-						<!-- Elements -->
-							<article id="elements">
-								<h2 class="major">Elements</h2>
-
-								<section>
-									<h3 class="major">Text</h3>
-									<p>This is <b>bold</b> and this is <strong>strong</strong>. This is <i>italic</i> and this is <em>emphasized</em>.
-									This is <sup>superscript</sup> text and this is <sub>subscript</sub> text.
-									This is <u>underlined</u> and this is code: <code>for (;;) { ... }</code>. Finally, <a href="#">this is a link</a>.</p>
-									<hr />
-									<h2>Heading Level 2</h2>
-									<h3>Heading Level 3</h3>
-									<h4>Heading Level 4</h4>
-									<h5>Heading Level 5</h5>
-									<h6>Heading Level 6</h6>
-									<hr />
-									<h4>Blockquote</h4>
-									<blockquote>Fringilla nisl. Donec accumsan interdum nisi, quis tincidunt felis sagittis eget tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan faucibus. Vestibulum ante ipsum primis in faucibus lorem ipsum dolor sit amet nullam adipiscing eu felis.</blockquote>
-									<h4>Preformatted</h4>
-									<pre><code>i = 0;
-
-while (!deck.isInOrder()) {
-    print 'Iteration ' + i;
-    deck.shuffle();
-    i++;
-}
-
-print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
-								</section>
-
-								<section>
-									<h3 class="major">Lists</h3>
-
-									<h4>Unordered</h4>
-									<ul>
-										<li>Dolor pulvinar etiam.</li>
-										<li>Sagittis adipiscing.</li>
-										<li>Felis enim feugiat.</li>
-									</ul>
-
-									<h4>Alternate</h4>
-									<ul class="alt">
-										<li>Dolor pulvinar etiam.</li>
-										<li>Sagittis adipiscing.</li>
-										<li>Felis enim feugiat.</li>
-									</ul>
-
-									<h4>Ordered</h4>
-									<ol>
-										<li>Dolor pulvinar etiam.</li>
-										<li>Etiam vel felis viverra.</li>
-										<li>Felis enim feugiat.</li>
-										<li>Dolor pulvinar etiam.</li>
-										<li>Etiam vel felis lorem.</li>
-										<li>Felis enim et feugiat.</li>
-									</ol>
-									<h4>Icons</h4>
-									<ul class="icons">
-										<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-										<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-										<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-										<li><a href="#" class="icon fa-github"><span class="label">Github</span></a></li>
-									</ul>
-
-									<h4>Actions</h4>
-									<ul class="actions">
-										<li><a href="#" class="button special">Default</a></li>
-										<li><a href="#" class="button">Default</a></li>
-									</ul>
-									<ul class="actions vertical">
-										<li><a href="#" class="button special">Default</a></li>
-										<li><a href="#" class="button">Default</a></li>
-									</ul>
-								</section>
-
-								<section>
-									<h3 class="major">Table</h3>
-									<h4>Default</h4>
-									<div class="table-wrapper">
-										<table>
-											<thead>
-												<tr>
-													<th>Name</th>
-													<th>Description</th>
-													<th>Price</th>
-												</tr>
-											</thead>
-											<tbody>
-												<tr>
-													<td>Item One</td>
-													<td>Ante turpis integer aliquet porttitor.</td>
-													<td>29.99</td>
-												</tr>
-												<tr>
-													<td>Item Two</td>
-													<td>Vis ac commodo adipiscing arcu aliquet.</td>
-													<td>19.99</td>
-												</tr>
-												<tr>
-													<td>Item Three</td>
-													<td> Morbi faucibus arcu accumsan lorem.</td>
-													<td>29.99</td>
-												</tr>
-												<tr>
-													<td>Item Four</td>
-													<td>Vitae integer tempus condimentum.</td>
-													<td>19.99</td>
-												</tr>
-												<tr>
-													<td>Item Five</td>
-													<td>Ante turpis integer aliquet porttitor.</td>
-													<td>29.99</td>
-												</tr>
-											</tbody>
-											<tfoot>
-												<tr>
-													<td colspan="2"></td>
-													<td>100.00</td>
-												</tr>
-											</tfoot>
-										</table>
-									</div>
-
-									<h4>Alternate</h4>
-									<div class="table-wrapper">
-										<table class="alt">
-											<thead>
-												<tr>
-													<th>Name</th>
-													<th>Description</th>
-													<th>Price</th>
-												</tr>
-											</thead>
-											<tbody>
-												<tr>
-													<td>Item One</td>
-													<td>Ante turpis integer aliquet porttitor.</td>
-													<td>29.99</td>
-												</tr>
-												<tr>
-													<td>Item Two</td>
-													<td>Vis ac commodo adipiscing arcu aliquet.</td>
-													<td>19.99</td>
-												</tr>
-												<tr>
-													<td>Item Three</td>
-													<td> Morbi faucibus arcu accumsan lorem.</td>
-													<td>29.99</td>
-												</tr>
-												<tr>
-													<td>Item Four</td>
-													<td>Vitae integer tempus condimentum.</td>
-													<td>19.99</td>
-												</tr>
-												<tr>
-													<td>Item Five</td>
-													<td>Ante turpis integer aliquet porttitor.</td>
-													<td>29.99</td>
-												</tr>
-											</tbody>
-											<tfoot>
-												<tr>
-													<td colspan="2"></td>
-													<td>100.00</td>
-												</tr>
-											</tfoot>
-										</table>
-									</div>
-								</section>
-
-								<section>
-									<h3 class="major">Buttons</h3>
-									<ul class="actions">
-										<li><a href="#" class="button special">Special</a></li>
-										<li><a href="#" class="button">Default</a></li>
-									</ul>
-									<ul class="actions">
-										<li><a href="#" class="button">Default</a></li>
-										<li><a href="#" class="button small">Small</a></li>
-									</ul>
-									<ul class="actions">
-										<li><a href="#" class="button special icon fa-download">Icon</a></li>
-										<li><a href="#" class="button icon fa-download">Icon</a></li>
-									</ul>
-									<ul class="actions">
-										<li><span class="button special disabled">Disabled</span></li>
-										<li><span class="button disabled">Disabled</span></li>
-									</ul>
-								</section>
-
-								<section>
-									<h3 class="major">Form</h3>
-									<form method="post" action="#">
-										<div class="field half first">
-											<label for="demo-name">Name</label>
-											<input type="text" name="demo-name" id="demo-name" value="" placeholder="Jane Doe" />
-										</div>
-										<div class="field half">
-											<label for="demo-email">Email</label>
-											<input type="email" name="demo-email" id="demo-email" value="" placeholder="jane@untitled.tld" />
-										</div>
-										<div class="field">
-											<label for="demo-category">Category</label>
-											<div class="select-wrapper">
-												<select name="demo-category" id="demo-category">
-													<option value="">-</option>
-													<option value="1">Manufacturing</option>
-													<option value="1">Shipping</option>
-													<option value="1">Administration</option>
-													<option value="1">Human Resources</option>
-												</select>
-											</div>
-										</div>
-										<div class="field half first">
-											<input type="radio" id="demo-priority-low" name="demo-priority" checked>
-											<label for="demo-priority-low">Low</label>
-										</div>
-										<div class="field half">
-											<input type="radio" id="demo-priority-high" name="demo-priority">
-											<label for="demo-priority-high">High</label>
-										</div>
-										<div class="field half first">
-											<input type="checkbox" id="demo-copy" name="demo-copy">
-											<label for="demo-copy">Email me a copy</label>
-										</div>
-										<div class="field half">
-											<input type="checkbox" id="demo-human" name="demo-human" checked>
-											<label for="demo-human">Not a robot</label>
-										</div>
-										<div class="field">
-											<label for="demo-message">Message</label>
-											<textarea name="demo-message" id="demo-message" placeholder="Enter your message" rows="6"></textarea>
-										</div>
-										<ul class="actions">
-											<li><input type="submit" value="Send Message" class="special" /></li>
-											<li><input type="reset" value="Reset" /></li>
-										</ul>
-									</form>
-								</section>
-
-							</article>
-
 					</div>
 
 				<!-- Footer -->
 					<footer id="footer">
-						<p>maintained by <a href="http://www.hidden.com.au">Hidden Industries</a> <!-- based on <a href="https://html5up.net">HTML5 UP</a>.--></p>
+						<p>website by <a href="http://www.hidden.com.au">Hidden Industries</a> <!-- based on <a href="https://html5up.net">HTML5 UP</a>.--></p>
 					</footer>
 
 			</div>
