removed instagram link

--- a/index.html
+++ b/index.html
@@ -1,6 +1,19 @@
-
 <!DOCTYPE HTML>
 <!--
+		Site developed by...
+    ##    ##  ##  ######   ######   ######  ####    ##
+    ##    ##  ##  ##   ##  ##   ##  ##      ## ##   ##
+    ########  ##  ##   ##  ##   ##  ####    ##  ##  ##
+    ##    ##  ##  ##   ##  ##   ##  ##      ##   ## ##
+    ##    ##  ##  ######   ######   ######  ##    ####.com.au
+
+
+    Hidden Industries
+    ABN# 23 612 417 465
+
+	email: hidden@hidden.com.au
+
+	Template used
 	Dimension by HTML5 UP
 	html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
@@ -88,7 +101,6 @@ Warm regards,</br></br>
 								<ul class="icons">
 									<li><a href="https://www.linkedin.com/company/6457868/" class="icon fa-linkedin"><span class="label">Twitter</span></a></li>
 									<li><a href="https://www.facebook.com/cmcperfection/" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-									<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
 								</ul>
 							</article>
 					</div>
