updated copy and removed signature

--- a/index.html
+++ b/index.html
@@ -38,13 +38,6 @@
 						<div class="logo">
 							<span class="icon fa-diamond"></span>
 						</div>
-						<div class="content">
-							<div class="inner">
-								<img src="images/logo.svg" alt="" width="60%" />
-								<h1>CMC Perfection</h1>
-								<p>Call <a href="tel:0417 429 256">0417 429 256</a> to lose <em>"busy"</em> and get back to loving life!</p>
-							</div>
-						</div>
 						<nav>
 							<ul>
 								<li><a href="#intro">Intro</a></li>
@@ -53,6 +46,13 @@
 								<li><a href="#contact">Contact</a></li>
 							</ul>
 						</nav>
+						<div class="content">
+							<div class="inner">
+								<img src="images/logo.svg" alt="" width="60%" />
+								<h1>CMC Perfection</h1>
+								<p>Can be your perfect Personal Assistant. Call <a href="tel:0417 429 256">0417 429 256</a> to lose <em>"busy"</em> and get back to loving life!</p>
+							</div>
+						</div>
 					</header>
 				<!-- Main -->
 					<div id="main">
@@ -63,6 +63,18 @@
 								<p>Have you always dreamt of having your very own Personal or Virtual Assistant?</p>
 								<p>Well dream no more!</p>
 								<p>CMC Perfection can provide you with the luxury you have always desired at a cost you can afford. There is no need to have to have a full-time staff member.</br>You may only need your very own Personal or Virtual Assistant for an hour or two per week or even a day or two per week.</p>
+								<p>Example services provided;
+										<ul>
+											<li>General organising and decluttering</li>
+											<li>Skedule and appointment managment</li>
+											<li>Qualify leads or other vetting</li>
+											<li>Gift or Personal shopper</li>
+											<li>Supplier relationship management</li>
+											<li>Managing travel bookings and logistics</li>
+											<li>General research</li>
+											<li>Documenting current or create new procedures</li>
+										</ul>
+								</p>
 								<p>Let CMC Perfection cater to your needs and work in with you and your budget. Help is just a phone call away…</p>
 								<p>Call <a href="tel:0417 429 256">0417 429 256</a> to lose <em>busy</em> and get back to loving life!</p>
 							</article>
@@ -90,8 +102,7 @@ With the chance to secure your very own Personal or Virtual Assistant for as man
 Let me do what I love doing the most and organise your life like you never thought possible.</br>
 Allow me to create the gift of time for you and get your life sorted! Call me today to lock in the support you want and need. I look forward to hearing from you.</br>
 </br>
-Warm regards,</br></br>
- <img src="images/sig.svg" height="42" alt="Signature" /></br>CORINNE CULBERT, JP 103234</p>
+Warm regards,</br></br>CORINNE CULBERT, JP 103234</p>
 							</article>
 						<!-- Contact -->
 							<article id="contact">
