updated copy and added favicon

--- a/index.html
+++ b/index.html
@@ -28,6 +28,23 @@
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+		<link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png">
+		<link rel="apple-touch-icon" sizes="60x60" href="/apple-icon-60x60.png">
+		<link rel="apple-touch-icon" sizes="72x72" href="/apple-icon-72x72.png">
+		<link rel="apple-touch-icon" sizes="76x76" href="/apple-icon-76x76.png">
+		<link rel="apple-touch-icon" sizes="114x114" href="/apple-icon-114x114.png">
+		<link rel="apple-touch-icon" sizes="120x120" href="/apple-icon-120x120.png">
+		<link rel="apple-touch-icon" sizes="144x144" href="/apple-icon-144x144.png">
+		<link rel="apple-touch-icon" sizes="152x152" href="/apple-icon-152x152.png">
+		<link rel="apple-touch-icon" sizes="180x180" href="/apple-icon-180x180.png">
+		<link rel="icon" type="image/png" sizes="192x192"  href="/android-icon-192x192.png">
+		<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+		<link rel="icon" type="image/png" sizes="96x96" href="/favicon-96x96.png">
+		<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+		<link rel="manifest" href="/manifest.json">
+		<meta name="msapplication-TileColor" content="#000">
+		<meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
+		<meta name="theme-color" content="#ffffff">
 	</head>
 	<body>
 
@@ -109,6 +126,7 @@ Warm regards,</br></br>CORINNE CULBERT, JP 103234</p>
 								<h2 class="major">Contact</h2>
 								<h3>Email: <a href="mailto:corinne@cmcperfection.com.au">corinne@cmcperfection.com.au</a></h3>
 								<h3>Phone: <a href="tel:0417 429 256">0417 429 256</a></h3>
+								<h3>Postage: PO Box 3503, West Tamworth NSW 2340</h3>
 								<ul class="icons">
 									<li><a href="https://www.linkedin.com/company/6457868/" class="icon fa-linkedin"><span class="label">Twitter</span></a></li>
 									<li><a href="https://www.facebook.com/cmcperfection/" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
@@ -118,7 +136,7 @@ Warm regards,</br></br>CORINNE CULBERT, JP 103234</p>
 
 				<!-- Footer -->
 					<footer id="footer">
-						<p>website by <a href="http://www.hidden.com.au">Hidden Industries</a> <!-- based on <a href="https://html5up.net">HTML5 UP</a>.--></p>
+						<p>website by <a href="https://www.hidden.com.au">Hidden Industries</a> <!-- based on <a href="https://html5up.net">HTML5 UP</a>.--></p>
 					</footer>
 
 			</div>
