--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 							<div class="inner">
 								<img src="images/logo.svg" alt="" width="60%" />
 								<h1>CMC Perfection</h1>
-								<p>Can be your perfect Personal Assistant. Call <a href="tel:0417 429 256">0417 429 256</a> to lose <em>"busy"</em> and get back to loving life!</p>
+								<p>Need a Personal Assistant?</p><p>Call CMC Perfection today!</br><a href="tel:0417 429 256">0417 429 256</a></p>
 							</div>
 						</div>
 					</header>
@@ -88,17 +88,17 @@
 								<span class="image main"><img src="images/cmc_perfection.png" alt="" /></span>
 								<p>Have you always dreamt of having your very own Personal or Virtual Assistant?</p>
 								<p>Well dream no more!</p>
-								<p>CMC Perfection can provide you with the luxury you have always desired at a cost you can afford. There is no need to have to have a full-time staff member.</br>You may only need your very own Personal or Virtual Assistant for an hour or two per week or even a day or two per week.</p>
-								<p>Example services provided;
+								<p>CMC Perfection can provide you with the luxury you have always desired at a cost you can afford. There is no need to have to have a full-time staff member.</p><p>You may only need your very own Personal or Virtual Assistant for an hour or two per week or even a day or two per week.</p>
+								<p>Some example services CMC Perfection can provide you are:
 										<ul>
-											<li>General organising and decluttering</li>
-											<li>Skedule and appointment managment</li>
-											<li>Qualify leads or other vetting</li>
-											<li>Gift or Personal shopper</li>
-											<li>Supplier relationship management</li>
-											<li>Managing travel bookings and logistics</li>
-											<li>General research</li>
-											<li>Documenting current or create new procedures</li>
+											<li>General organising and decluttering;</li>
+											<li>Schedule and appointment managment;</li>
+											<li>Qualify leads or other vetting;</li>
+											<li>Gift or personal shopper;</li>
+											<li>Supplier relationship management;</li>
+											<li>Managing travel bookings and logistics;</li>
+											<li>General research; and</li>
+											<li>Documenting current or create new procedures.</li>
 										</ul>
 								</p>
 								<p>Let CMC Perfection cater to your needs and work in with you and your budget. Help is just a phone call away…</p>
@@ -119,16 +119,16 @@
 							<article id="about">
 								<h2 class="major">About</h2>
 								<span class="image main"><img src="images/pic03.jpg" alt="" /></span>
-								<p>My name is Corinne M. Culbert. I started CMC Perfection in 2014.</br>
- I was looking for an opportunity to have a flexible work life so as to ensure that I was able to also enjoy being a Mum.</br>
-As a result, I took a leap of faith and resigned from my full-time job in 2015. Quickly it became apparent that this was the best decision I had made.</br>
-Every day not only became different and exciting but enabled me to work the hours that suited me.</br>
-I realised that there is such a desire for everyone to have a Personal or Virtual Assistant however to most, it seemed unachievable and financially unviable.</br>
-With the chance to secure your very own Personal or Virtual Assistant for as many or as little time as you need this appealed to so many people. From having someone by your side or to being just a phone call away, whatever you need it is possible.</br>
-Let me do what I love doing the most and organise your life like you never thought possible.</br>
-Allow me to create the gift of time for you and get your life sorted! Call me today to lock in the support you want and need. I look forward to hearing from you.</br>
+								<p>My name is Corinne M. Culbert. I started CMC Perfection in 2014.</p>
+								<p>I was looking for an opportunity to have a flexible work life so as to ensure that I was able to also enjoy being a Mum.</p>
+								<p>As a result, I took a leap of faith and resigned from my full-time job in 2015. Quickly it became apparent that this was the best decision I had made.</p>
+								<p>Every day not only became different and exciting but enabled me to work the hours that suited me.</p>
+								<p>I realised that there is such a desire for everyone to have a Personal or Virtual Assistant however to most, it seemed unachievable and financially unviable.</p>
+								<p>With the chance to secure your very own Personal or Virtual Assistant for as many or as little time as you need this appealed to so many people. From having someone by your side or to being just a phone call away, whatever you need it is possible.</p>
+								<p>Let me do what I love doing the most and organise your life like you never thought possible.</p>
+								<p>Allow me to create the gift of time for you and get your life sorted! Call me today to lock in the support you want and need. I look forward to hearing from you.</br>
 </br>
-Warm regards,</br></br>CORINNE CULBERT, JP 103234</p>
+Warm regards,</br></br>CORINNE M. CULBERT, <span style="font-size: 0.8rem;">JP 103234</span></p>
 							</article>
 						<!-- Contact -->
 							<article id="contact">
