Changes for Corinne adding instagram and new intro copy

--- a/index.html
+++ b/index.html
@@ -88,20 +88,35 @@
 								<span class="image main"><img src="images/cmc_perfection.png" alt="" /></span>
 								<p>Have you always dreamt of having your very own Personal or Virtual Assistant?</p>
 								<p>Well dream no more!</p>
-								<p>CMC Perfection can provide you with the luxury you have always desired at a cost you can afford. There is no need to have to have a full-time staff member.</p><p>You may only need your very own Personal or Virtual Assistant for an hour or two per week or even a day or two per week.</p>
-								<p>Some example services CMC Perfection can provide you are:
+								<p>CMC Perfection can provide you with the luxury you have always desired at a cost you can afford.</p>
+								<p>There is no need to have to have a full-time staff member! You may only need your very own Personal or Virtual Assistant for an hour or two per week or even a day or two per week.</p>
+								
+								<p>Time is the ultimate luxury, let CMC Perfection create it for you!</p>
+								<p>The options are endless, if it is legal and ethical it can be arranged by CMC Perfection.</p>
+								<p>Need help organising your home or office? CMC Perfection can give it the overhaul it needs and the regular maintenance it requires!</p>
+								<p>Want to organise a wedding or other event? Consider it done!</p>
+								<p>Need the perfect gift for the perfect person? CMC Perfection can sort it!</p>
+								<p>Need a holiday? CMC Perfection is on it!</p>
+								<p>Relocating? Moving is very stressful whether it be moving across the road or across the world! Let CMC Perfection help!</p>
+								<p>CMC Perfection can attend to everyday matters from the mundane to the miraculous. It’s often the smallest tasks and the minutest details that matter most.</p>
+								<p>Here’s just a small sample of tasks CMC Perfection can complete for you:
 										<ul>
-											<li>General organising and decluttering;</li>
-											<li>Schedule and appointment managment;</li>
-											<li>Qualify leads or other vetting;</li>
-											<li>Gift or personal shopper;</li>
-											<li>Supplier relationship management;</li>
+											<li>Wedding or other event planning (whether you are looking for a little help or a lot, CMC Perfection can tailor make a package to suit exactly what your event needs);</li>
+											<li>General organising and decluttering of your home or office;</li>
+											<li>Obtain estimates and coordinate all household or office repairs;</li>
+											<li>Schedule and appointment management;</li>
+											<li>Manage your phone and email enquiries and respond where necessary;</li>
+											<li>Gift or personal shopper including birthday reminders;</li>
 											<li>Managing travel bookings and logistics;</li>
-											<li>General research; and</li>
-											<li>Documenting current or create new procedures.</li>
+											<li>Undertake research;</li>
+											<li>Documenting current or create new procedures;</li>
+											<li>Supplier relationship management;</li>
+											<li>Keep you organised;</li>
+											<li>And much, much more!</li>
 										</ul>
 								</p>
-								<p>Let CMC Perfection cater to your needs and work in with you and your budget. Help is just a phone call away…</p>
+								<p>Do you know someone who needs more time? You can also give someone the gift of time by buying them a gift voucher today!</p>
+								<p>Let CMC Perfection cater to your needs and work in with you and your budget.</p><p>Help is just a phone call away…</p>
 								<p>Call <a href="tel:0417 429 256">0417 429 256</a> to lose <em>busy</em> and get back to loving life!</p>
 							</article>
 						<!-- Work -->
@@ -139,6 +154,7 @@ Warm regards,</br></br>CORINNE M. CULBERT, <span style="font-size: 0.8rem;">JP 1
 								<ul class="icons">
 									<li><a href="https://www.linkedin.com/company/6457868/" class="icon fa-linkedin"><span class="label">Twitter</span></a></li>
 									<li><a href="https://www.facebook.com/cmcperfection/" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+									<li><a href="https://www.instagram.com/cmcperfection/" class="icon fa-instagram"><span class="label">Facebook</span></a></li>
 								</ul>
 							</article>
 					</div>
