--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 							<div class="inner">
 								<img src="images/logo.svg" alt="" width="60%" />
 								<h1>CMC Perfection</h1>
-								<p>Need a Personal Assistant?</p><p>Call CMC Perfection today!</br><a href="tel:0417 429 256">0417 429 256</a></p>
+								<p>Need a Personal Assistant?</p><p>Call CMC Perfection today!&nbsp;</br><a href="tel:+61417429256">0417&nbsp;429&nbsp;256</a></p>
 							</div>
 						</div>
 					</header>
@@ -117,7 +117,7 @@
 								</p>
 								<p>Do you know someone who needs more time? You can also give someone the gift of time by buying them a gift voucher today!</p>
 								<p>Let CMC Perfection cater to your needs and work in with you and your budget.</p><p>Help is just a phone call away…</p>
-								<p>Call <a href="tel:0417 429 256">0417 429 256</a> to lose <em>busy</em> and get back to loving life!</p>
+								<p>Call <a href="tel:+61417429256">0417 429 256</a> to lose <em>busy</em> and get back to loving life!</p>
 							</article>
 						<!-- Work -->
 							<article id="work">
@@ -149,7 +149,7 @@ Warm regards,</br></br>CORINNE M. CULBERT, <span style="font-size: 0.8rem;">JP 1
 							<article id="contact">
 								<h2 class="major">Contact</h2>
 								<h3>Email: <a href="mailto:corinne@cmcperfection.com.au">corinne@cmcperfection.com.au</a></h3>
-								<h3>Phone: <a href="tel:0417 429 256">0417 429 256</a></h3>
+								<h3>Phone: <a href="tel:+61417429256">0417 429 256</a></h3>
 								<h3>Postage: PO Box 3503, West Tamworth NSW 2340</h3>
 								<ul class="icons">
 									<li><a href="https://www.linkedin.com/company/6457868/" class="icon fa-linkedin"><span class="label">Twitter</span></a></li>
