--- a/index.html
+++ b/index.html
@@ -115,26 +115,93 @@
 											<li>And much, much more!</li>
 										</ul>
 								</p>
-								<p>Do you know someone who needs more time? You can also give someone the gift of time by buying them a gift voucher today!</p>
+								<p>Do you know someone who needs more time? You can also give someone the gift of time by buying them a <a href="assets/CMC_Gift_Certificate.pdf" target="_blank"> gift voucher</a> today!</p>
 								<p>Let CMC Perfection cater to your needs and work in with you and your budget.</p><p>Help is just a phone call away…</p>
 								<p>Call <a href="tel:+61417429256">0417 429 256</a> to lose <em>busy</em> and get back to loving life!</p>
 							</article>
 						<!-- Work -->
 							<article id="work">
 								<h2 class="major">Praise</h2>
-								<p><blockquote>Corinne Culbert worked for Everingham Solomons initially as an administrator in the Business department and then as a contractor from CMC Perfection. Corinne was always an efficient and friendly person and we would not hesitate to employ Corinne’s services through CMC Perfection should the need arise.</blockquote><strong>MONICA BROOKS, Everingham Solomons Solicitors Tamworth</strong></p>
-								<p><blockquote>Corinne Culbert has been working as my Virtual Assistant since 2011. I didn’t need a full-time Personal Assistant for my plumbing business but definitely needed someone on stand-by to prepare the odd quote and invoice for me. It was so easy. All I had to do was send a text message through to CMC Perfection and knew that my request was already under control. My business was based in Sydney and Corinne was based in Tamworth. This never was a problem. She managed to handle all my affairs for my accountants who were also based in Sydney. The distance was never an issue. I simply posted her all my receipts and she handled the rest. In my view, there is no better way to go. When running a small business to keep overheads down, hire CMC Perfection as your Virtual Assistant today. I recommend them highly!</blockquote><strong>JOHNNY VASILJ, NSW Plumbcorp</strong></p>
-								<p><blockquote>I don’t need a full-time Personal Assistant. Having CMC Perfection just a phone call away to offer the assistance I need when I need it is great! I recommend CMC Perfection if you after a Personal Assistant for as little or as much time as you need and to be on-call for when it suits you the most.</blockquote><strong>MARK SIPPLE, Mark Sipple Plastering</strong></p>
-								<p><blockquote>When I decided to start up my own cleaning business in September 2015 I bought a new computer. At that point, I wasn’t really sure where to start. I contacted CMC Perfection for some guidance. At that point, it was clear that I would simply hand over my new computer to CMC Perfection and let them set it up for me. My emails were set-up and all my necessary documents were created as templates. As well as my computer being set-up, I was provided clear instructions and given everything on a USB for back-up. If you are starting your own business and need support to do so and a business that you can trust, don’t hesitate to contact CMC Perfection.</blockquote><strong>JUDITH SEACH, Rose’s Commercial Cleaning</strong></p>
-								<p><blockquote>I started my own business in May 2016. I really wasn’t sure where to start when it came to being prepared for invoicing my clients and keeping track of all of my paperwork for my accountants. CMC Perfection offered me the assistance I needed. They prepared all the necessary templates for me to enable me to run my business smoothly and document everything required. I recommend CMC Perfection for getting your business started as well as offering ongoing support when required.</blockquote><strong>CAMERON THOMAS, Sole Trader</strong></p>
-								<p><blockquote>Corinne Culbert worked part-time with Fencing Australia from 2012 to 2014. When we realised that she had commenced her own business working as a consultant Personal Assistant, we booked CMC Perfection in straight away. CMC Perfection is a flexible way to have office support. In most cases, there is often no need to have a full-time staff member. You can simply cater to the requirements of your workplace week to week. CMC Perfection is always accommodating and happy to assist whenever possible. We definitely recommend CMC Perfection for your Personal Assistant needs. Whether you need support in the office or as a virtual assistant, don’t hesitate to call CMC Perfection.</blockquote><strong>CHRIS POWER, Fencing Australia Pty Limited</strong></p>
-								<p><blockquote>I have known Corinne Culbert since the commencement of her career as a Personal Assistant back in 1996. Since that time, Ms. Culbert has been offering my business support whenever I have needed it. I don’t need a full-time PA and as a result being able to have CMC Perfection on-call for when my business needs her most is wonderful. I recommend CMC Perfection highly. There is no pressure or lock-in contracts. Help when needed is literally a phone call away.</blockquote><strong>JOHNNY CICUTO, Johnny’s Automotive Workshop</strong></p>
+								<p><blockquote>I have known Corinne for 5 years and in that time, I have used her services on multiple
+									occasions. I can say, without a doubt, that she was instrumental in helping me grow my
+									business to where it is today. She is the most organised person I have ever had the privilege
+									of working with. Put very simply, Corinne will make your life easier!</blockquote>
+									<strong>KELLY GEORGE, Kelly George Aesthetics, Tamworth NSW</strong></p>
+								<p><blockquote>CMC Perfection has been assisting JNC Group since July 2017. At first, they were
+									assisting predominately with Government tender completion however now, I have secured
+									my very own Virtual Assistant. CMC Perfection are always ready to offer the admin support
+									I need when I need it! I don't need a full time PA and having CMC Perfection on standby to
+									assist when it suits me is perfect. I travel a lot for work and often don't need help during
+									business hours. CMC Perfection are always accommodating and ready and willing to assist
+									me no matter what time it is.</blockquote><strong>JEREMY BLANCH, Director | CEO, JNC Group Pty Ltd, Armidale NSW -  September 2019</strong></p>
+								<p><blockquote>CMC Perfection assisted the Training Services NSW - New England team with the
+									coordination of the 2019 NSW Training Awards. I did not require a full-time personal
+									assistant but someone who was able to assist with the administration, event coordination
+									and someone that had high attention to detail. I was able to hire CMC Perfection as
+									required, when I needed tasks completed or deadlines met. They were always ready and
+									willing to assist in any way they could. Call CMC Perfection today to get a Virtual Assistant.
+								</blockquote><strong>BRONNIE COCKING, Training Services Manager, Training Services NSW, Tamworth NSW – September 2019</strong></p>
+								<p><blockquote>I don’t need a full-time Personal Assistant. Having CMC Perfection just a phone call away
+									to offer the assistance I need when I need it is great! I recommend CMC Perfection if you
+									are after a Personal Assistant for as little or as much time as you need and to be on-call for
+									when it suits you the most. I have been using CMC Perfection since January 2016 to assist
+									me with all my administration needs.
+								</blockquote><strong>MARK SIPPLE, Mark Sipple Plastering, Tamworth NSW – July 2019</strong></p>
+								<p><blockquote>When I decided to start up my own cleaning business in September 2015, I bought a new
+									computer. At that point, I wasn’t really sure where to start. I contacted CMC Perfection for
+									some guidance. At that point, it was clear that I would simply hand over my new computer
+									to CMC Perfection and let them set it up for me. My emails were set-up and all my
+									necessary documents were created as templates. As well as my computer being set-up, I
+									was provided clear instructions and given everything on a USB for back-up. If you are
+									starting your own business and need support to do so and a business that you can trust,
+									don’t hesitate to contact CMC Perfection. Now, whenever I need a bit of admin support, I
+									simply call CMC Perfection as help, is literally “just a phone call away”!
+								</blockquote><strong>JUDITH SEACH, Rose’s Commercial Cleaning, Tamworth NSW – November 2018</strong></p>
+								<p><blockquote>I started my own business in May 2016. I really wasn’t sure where to start when it came to
+									being prepared for invoicing my clients and keeping track of all of my paperwork for my
+									accountants. CMC Perfection offered me the assistance I needed. They prepared all the
+									necessary templates for me to enable me to run my business smoothly and document
+									everything required. I recommend CMC Perfection for getting your business started as well
+									as offering ongoing support when required.
+								</blockquote><strong>CAMERON THOMAS, Sole Trader, Toowoomba QLD – December	2016</strong></p>
+								<p><blockquote>Corinne Culbert worked for Everingham Solomons initially as an administrator in the
+									Business department and then as a contractor from CMC Perfection. Corinne was always
+									an efficient and friendly person and we would not hesitate to employ Corinne’s services
+									through CMC Perfection should the need arise.
+								</blockquote><strong>MONICA BROOKS, Everingham Solomons Solicitors, Tamworth NSW – November	2016</strong></p>
+								<p><blockquote>Corinne Culbert worked part-time with Fencing Australia from 2012 to 2014. When we
+									realised that she had commenced her own business working as a consultant Personal
+									Assistant, we booked CMC Perfection in straight away. CMC Perfection is a flexible way to
+									have office support. In most cases, there is often no need to have a full-time staff member.
+									You can simply cater to the requirements of your workplace week to week. CMC Perfection
+									is always accommodating and happy to assist whenever possible. We definitely
+									recommend CMC Perfection for your Personal Assistant needs. Whether you need support
+									in the office or as a virtual assistant, don’t hesitate to call CMC Perfection.
+								</blockquote><strong>CHRIS POWER, Fencing Australia Pty Limited, Tamworth NSW – November 2016</strong></p>
+								<p><blockquote>Corinne Culbert has been working as my Virtual Assistant since 2011. I didn’t need a full-
+									time Personal Assistant for my plumbing business but definitely needed someone on stand-
+									by to prepare the odd quote and invoice for me. It was so easy. All I had to do was send a
+									text message through to CMC Perfection and knew that my request was already under
+									control. My business was based in Sydney and Corinne was based in Tamworth. This was
+									never a problem. Corinne managed to handle all my affairs for my accountants who were
+									also based in Sydney. The distance was never an issue. I simply posted her all my receipts
+									and she handled the rest. In my view, there is no better way to go. When running a small
+									business to keep overheads down, hire CMC Perfection as your Virtual Assistant. I
+									recommend them highly!
+								</blockquote><strong>JOHNNY VASILJ, NSW Plumbcorp, Bondi NSW – 2015</strong></p>
+								<p><blockquote>I have known Corinne Culbert since the commencement of her career as a Personal
+									Assistant back in 1996. Since that time, Ms Culbert has been offering my business support
+									whenever I have needed it. I don’t need a full-time PA and as a result being able to have
+									CMC Perfection on-call for when my business needs help most is wonderful. I recommend
+									CMC Perfection highly. There is no pressure or lock-in contracts. Help when needed is
+									literally a phone call away.
+								</blockquote><strong>JOHNNY CICUTO, Johnny’s Automotive Workshop, Auburn NSW – 2015</strong></p>
 							</article>
 						<!-- About -->
 							<article id="about">
 								<h2 class="major">About</h2>
 								<span class="image main"><img src="images/pic03.jpg" alt="" /></span>
-								<p>My name is Corinne M. Culbert. I started CMC Perfection in 2014.</p>
+								<p>My name is Corinne M. Culbert-Rafferty. I started CMC Perfection in 2014.</p>
 								<p>I was looking for an opportunity to have a flexible work life so as to ensure that I was able to also enjoy being a Mum.</p>
 								<p>As a result, I took a leap of faith and resigned from my full-time job in 2015. Quickly it became apparent that this was the best decision I had made.</p>
 								<p>Every day not only became different and exciting but enabled me to work the hours that suited me.</p>
@@ -143,7 +210,7 @@
 								<p>Let me do what I love doing the most and organise your life like you never thought possible.</p>
 								<p>Allow me to create the gift of time for you and get your life sorted! Call me today to lock in the support you want and need. I look forward to hearing from you.</br>
 </br>
-Warm regards,</br></br>CORINNE M. CULBERT, <span style="font-size: 0.8rem;">JP 103234</span></p>
+Warm regards,</br></br>CORINNE M. CULBERT-RAFFERTY, <span style="font-size: 0.8rem;">JP 103234</span></p>
 							</article>
 						<!-- Contact -->
 							<article id="contact">
