added date to first praise

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 									occasions. I can say, without a doubt, that she was instrumental in helping me grow my
 									business to where it is today. She is the most organised person I have ever had the privilege
 									of working with. Put very simply, Corinne will make your life easier!</blockquote>
-									<strong>KELLY GEORGE, Kelly George Aesthetics, Tamworth NSW</strong></p>
+									<strong>KELLY GEORGE, Kelly George Aesthetics, Tamworth NSW - September 2019</strong></p>
 								<p><blockquote>CMC Perfection has been assisting JNC Group since July 2017. At first, they were
 									assisting predominately with Government tender completion however now, I have secured
 									my very own Virtual Assistant. CMC Perfection are always ready to offer the admin support
